--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    rth
-    rthniyukiytsrhthsr
-    sygndgny
-    dzhsrth
+<h1>ghbdtn iuh</h1>
 </body>
 
 </html>
