--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,7 @@
 </head>
 <body>
 <h1>ghbdtn iuh</h1>
-<h1>ghbdtn iuh</h1>
-<h1>ghbdtn iuh</h1>
-<h1>ghbdtn iuh</h1>
-<h1>ghbdtn iuh</h1>
-    rth
-    rthniyukiytsrhthsr
-    sygndgny
-    dzhsrth
+<h2>rxj</h2>
 </body>
 
 </html>
