--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>ghbdtn iuh</h1>
-<h1>ghbdtn iuh</h1>
-<h1>ghbdtn iuh</h1>
-<h1>ghbdtn iuh</h1>
-<h1>ghbdtn iuh</h1>
-    rth
-    rthniyukiytsrhthsr
-    sygndgny
-    dzhsrth
-    <p>for dev</p>
-<h2>rxj</h2>
+<h1>everyOne HI</h1>
 </body>
 
 </html>
