--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 <body>
 <h1>everyOne HI</h1>
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, error aperiam facilis quas quasi quis, delectus quo voluptas molestias, modi dignissimos beatae praesentium dolorum maxime dolore illo velit aliquid excepturi.</p>
+
+<footer>
+    ugbolds
+</footer>
 </body>
 
 </html>
